--- a/my.css
+++ b/my.css
@@ -1520,7 +1520,7 @@ pre[class*="language-"] {
             border-bottom-right-radius: 0.25em;
             border-bottom-left-radius: 0.25em;
             width: fit-content;
-            padding: 0 10px;
+            padding: 8px 10px 5px 10px;
             background-color: #424242;
             color: #eceff1;
         }
